Column refresh button now shown outside of the jQuery hidden area

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -100,7 +100,7 @@ div.columnheading {
     border-bottom: 1px solid #bbbbbb;
 }
 
-a.navformbutton {
+div.columnheading a {
     float:right;
     position:relative;
     top:-1px;
