--- a/themes/inverted/css/style.css
+++ b/themes/inverted/css/style.css
@@ -3,7 +3,6 @@ html, body {
 	padding:0px;
 	font-family:"Ubuntu","Lucida Grande","Helvetica","Trebuchet MS",sans-serif;
 	font-size:90%;
-	background-color:#292929;
 }
 
 #page {
@@ -11,12 +10,13 @@ html, body {
 }
 
 div#headerplusstatusform {
-	background: #393939;
-    background: -moz-linear-gradient(top, #666666, #393939);
+	background: #0099b9;
+    background: -moz-linear-gradient(top, #a7eae0, #0099b9);
     background: -webkit-gradient(linear,
-                left top, left bottom, from(#666666), to(#393939));
+                left top, left bottom, from(#a7eae0), to(#0099b9));
     filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#666666', EndColorStr='#393939', GradientType=0);
+                StartColorStr='#a7eae0', EndColorStr='#0099b9', GradientType=0);
+    border-bottom: 1px solid #bbbbbb;
 }
 
 #header {
@@ -59,10 +59,7 @@ div.links a.hover {
 #statusformdiv {
     height:50px;
 	padding:10px;
-}
-
-#statusformdiv a {
-    color:#666666;
+	/*background: white;*/
 }
 
 input[name="status"] {
@@ -70,7 +67,7 @@ input[name="status"] {
 }
 
 input.reply {
-	width:70%;
+	width:500px;
 }
 
 div#mainarea {
@@ -84,8 +81,8 @@ div.column {
     margin:0px;
 	height: 100%;
     overflow-y: auto;
-    border: 1px solid #313131;
-    background-color:#222222;
+    border: 1px solid #bbbbbb;
+    background-color:#fafafa;
 }
 
 div.columnheading {
@@ -94,17 +91,17 @@ div.columnheading {
 	text-align:center;
 	text-transform: uppercase;
 	font-size: 120%;
-	background: #313131;
-    background: -moz-linear-gradient(top, #393939, #313131);
+	background: #eeeeee;
+    background: -moz-linear-gradient(top, #ffffff, #eeeeee);
     background: -webkit-gradient(linear,
-                left top, left bottom, from(#393939), to(#313131));
+                left top, left bottom, from(#ffffff), to(#eeeeee));
     filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#393939', EndColorStr='#313131', GradientType=0);
-    border-bottom: 1px solid #313131;
+                StartColorStr='#ffffff', EndColorStr='#eeeeee', GradientType=0);
+    border-bottom: 1px solid #bbbbbb;
 }
 
 div.columnheading a {
-	color:#888888;
+	color:#666666;
 	text-decoration:none;
 }
 
@@ -112,8 +109,8 @@ div.columnheading a.boxedbutton {
     float:right;
     position:relative;
     top:-1px;
-	color:#666666;
-	border: 1px solid #666666;
+	color:#cccccc;
+	border: 1px solid #cccccc;
 	padding:0 3px 1px 3px;
 	border-radius:2px;
 	--moz-border-radius:2px;
@@ -149,8 +146,8 @@ div.convohider {
 }
 
 .operations a {
-	color:#666666;
-	border: 1px solid #666666;
+	color:#cccccc;
+	border: 1px solid #cccccc;
 	padding:0 3px 1px 3px;
 	border-radius:2px;
 	-moz-border-radius:2px;
@@ -159,7 +156,7 @@ div.convohider {
 }
 
 .metatext {
-	color:#666666;
+	color:#cccccc;
 	width:100%;
 }
 
@@ -183,16 +180,21 @@ div.metatable {
 
 div.convoarea {
     display:none;
-    margin-top:30px;
-    float:left;
-    position:relative;
+    margin-top:35px;
+    padding:10px;
+    position:absolute;
+    float:right;
+    width: 350px;
+    background-color:#eeeeee;
+    border: 2px dashed #888888;
 }
 
-div.replyarea {
-    display:none;
-    margin-top:30px;
-    float:left;
-    position:relative;
+div#replybox {
+    background-color:#eeeeee;
+    color:#888888;
+    padding:10px;
+    margin:0;
+    width:620px;
 }
     
 tr {
@@ -211,7 +213,7 @@ td .tweettextcell {
 }
 
 .name a{
-	color:#666666;
+	color:#cccccc;
 	text-decoration:none;
 }
 
@@ -240,8 +242,8 @@ div.colswitcherform {
 }
 
 div.colswitcherform a {
-	color:#666666;
-	border: 1px solid #666666;
+	color:#cccccc;
+	border: 1px solid #cccccc;
 	padding:0 3px 1px 3px;
 	border-radius:2px;
 	--moz-border-radius:2px;
