--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -3,7 +3,6 @@ html, body {
 	padding:0px;
 	font-family:"Ubuntu","Lucida Grande","Helvetica","Trebuchet MS",sans-serif;
 	font-size:90%;
-	background-color:#292929;
 }
 
 #page {
@@ -11,17 +10,18 @@ html, body {
 }
 
 div#headerplusstatusform {
-	background: #393939;
-    background: -moz-linear-gradient(top, #666666, #393939);
+	background: #0099b9;
+    background: -moz-linear-gradient(top, #a7eae0, #0099b9);
     background: -webkit-gradient(linear,
-                left top, left bottom, from(#666666), to(#393939));
+                left top, left bottom, from(#a7eae0), to(#0099b9));
     filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#666666', EndColorStr='#393939', GradientType=0);
+                StartColorStr='#a7eae0', EndColorStr='#0099b9', GradientType=0);
+    border-bottom: 1px solid #bbbbbb;
 }
 
 #header {
 	/*background:#7aa5d9;*/
-	height:50px;
+	height:45px;
 	width:100%;
 	padding:0px;
 	margin:0px;
@@ -57,12 +57,18 @@ div.links a.hover {
 }
 
 #statusformdiv {
-    height:50px;
+    height:55px;
 	padding:10px;
+	/*background: white;*/
 }
 
-#statusformdiv a {
-    color:#666666;
+div#serviceselectors {
+    margin-top:5px;
+}
+
+div#serviceselectors img {
+    position:relative;
+    top:2px;
 }
 
 input[name="status"] {
@@ -84,8 +90,8 @@ div.column {
     margin:0px;
 	height: 100%;
     overflow-y: auto;
-    border: 1px solid #313131;
-    background-color:#222222;
+    border: 1px solid #bbbbbb;
+    background-color:#fafafa;
 }
 
 div.columnheading {
@@ -94,17 +100,17 @@ div.columnheading {
 	text-align:center;
 	text-transform: uppercase;
 	font-size: 120%;
-	background: #313131;
-    background: -moz-linear-gradient(top, #393939, #313131);
+	background: #eeeeee;
+    background: -moz-linear-gradient(top, #ffffff, #eeeeee);
     background: -webkit-gradient(linear,
-                left top, left bottom, from(#393939), to(#313131));
+                left top, left bottom, from(#ffffff), to(#eeeeee));
     filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#393939', EndColorStr='#313131', GradientType=0);
-    border-bottom: 1px solid #313131;
+                StartColorStr='#ffffff', EndColorStr='#eeeeee', GradientType=0);
+    border-bottom: 1px solid #bbbbbb;
 }
 
 div.columnheading a {
-	color:#888888;
+	color:#666666;
 	text-decoration:none;
 }
 
@@ -112,8 +118,8 @@ div.columnheading a.boxedbutton {
     float:right;
     position:relative;
     top:-1px;
-	color:#666666;
-	border: 1px solid #666666;
+	color:#cccccc;
+	border: 1px solid #cccccc;
 	padding:0 3px 1px 3px;
 	border-radius:2px;
 	--moz-border-radius:2px;
@@ -150,8 +156,8 @@ div.convohider {
 }
 
 .operations a {
-	color:#666666;
-	border: 1px solid #666666;
+	color:#cccccc;
+	border: 1px solid #cccccc;
 	padding:0 3px 1px 3px;
 	border-radius:2px;
 	-moz-border-radius:2px;
@@ -161,7 +167,7 @@ div.convohider {
 
 .metatext {
 	display:none;
-	color:#666666;
+	color:#cccccc;
 	width:100%;
 }
 
@@ -189,12 +195,12 @@ div.convoarea {
     position:absolute;
     float:right;
     width: 350px;
-    background-color:#313131;
+    background-color:#eeeeee;
     border: 2px dashed #888888;
 }
 
 div#replybox {
-    background-color:#313131;
+    background-color:#eeeeee;
     color:#888888;
     padding:10px;
     margin:0;
@@ -217,7 +223,7 @@ td .tweettextcell {
 }
 
 .name a{
-	color:#666666;
+	color:#cccccc;
 	text-decoration:none;
 }
 
@@ -246,8 +252,8 @@ div.colswitcherform {
 }
 
 div.colswitcherform a {
-	color:#666666;
-	border: 1px solid #666666;
+	color:#cccccc;
+	border: 1px solid #cccccc;
 	padding:0 3px 1px 3px;
 	border-radius:2px;
 	--moz-border-radius:2px;
