--- a/themes/inverted/style.css
+++ b/themes/inverted/style.css
@@ -134,13 +134,9 @@ div.columnnav {
     display:none;
 }
 
-.item {
+.text {
 	margin:20px 20px 40px 20px;
 	color:#888888;
-}
-
-div.convo {
-	margin:10px 20px 10px 35px;
 }
 
 div.reply {
@@ -194,12 +190,15 @@ div.metatable {
 div.convoarea {
     display:none;
     margin-top:35px;
-    padding:10px;
-    position:absolute;
-    float:right;
-    width: 350px;
+    margin-right:100px;
+    width: 100%;
     background-color:#313131;
-    border: 2px dashed #888888;
+    background: -moz-linear-gradient(top, #222222, #313131);
+    background: -webkit-gradient(linear,
+                left top, left bottom, from(#222222), to(#313131));
+    filter: progid:DXImageTransform.Microsoft.Gradient(
+                StartColorStr='#222222', EndColorStr='#313131', GradientType=0);
+    border-bottom: 1px solid #666666;
 }
 
 div#replybox {
