--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -201,11 +201,11 @@ div.convoarea {
     margin-right:100px;
     width: 100%;
     background-color:#eeeeee;
-    background: -moz-linear-gradient(top, #fafafa, #eeeeee);
+    background: -moz-linear-gradient(top, #f0f0f0, #eeeeee);
     background: -webkit-gradient(linear,
-                left top, left bottom, from(#fafafa), to(#eeeeee));
+                left top, left bottom, from(#f0f0f0), to(#eeeeee));
     filter: progid:DXImageTransform.Microsoft.Gradient(
-                StartColorStr='#fafafa', EndColorStr='#eeeeee', GradientType=0);
+                StartColorStr='#f0f0f0', EndColorStr='#eeeeee', GradientType=0);
     border-bottom: 1px solid #bbbbbb;
 }
 
